<resources>
    <string name="app_name">GeodataTableApp</string>
    <string name="login_activity_login">Логин</string>
    <string name="login_activity_password">Пароль</string>
    <string name="login_activity_button">Войти</string>
    <string name="login_activity_label">С возвращением</string>
    <string name="geodata_list_activity_img">Фото</string>
    <string name="geodata_list_activity_title">Список геоданных</string>
    <string name="login_error">Ошибка доступа!</string>
    <string name="login_error_description">Неверный логин или пароль</string>
    <string name="login_ok">Ок</string>
    <string name="login_empty_form">Заполните все поля</string>
    <string name="ic_gps">&#xf3c5;</string>
    <string name="ic_user">&#xf007;</string>
    <string name="ic_key">&#xf084;</string>
    <string name="ic_flag">&#xf024;</string>
    <string name="ic_circle">&#xf192;</string>
    <string name="ic_arrow_left">&#xf060;</string>
</resources>
