<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.LoginErrorFragment">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:contentPadding="@dimen/margin_20p"
        android:padding="@dimen/cardview_default_elevation"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Divider8pStyle"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_layout_height"
                android:layout_marginBottom="@dimen/margin_20p"
                android:src="@drawable/ic_locked"
                android:contentDescription="@string/geodata_list_activity_img" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@style/ErrorDialogTitleStyle"
                android:text="@string/login_error"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_20p"
                android:text="@string/login_error_description"/>
            <Button
                android:id="@+id/loginErrorDialogButton"
                style="@style/ButtonWithoutBackgroundStyle"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/login_ok"
                android:background="@drawable/login_error_round_button"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>